# wamms

./: .gitignore  .gitmodules  MANIFEST.in  README.md  constants.toml  create_direct_crossings_dataset.py  pyproject.toml
direct_traversals/: create_direct_traversals_dataset.py  local_time_asymmetries.py  overview_plots.py  view_extreme_cases.py
examples/: plot_trajectories_and_probabilities.py  test.py
resources/direct_traversals/: create_direct_traversals_dataset_philpott.py  overview_plots.py  view_unpaired_cases.py
resources/region_probabilities/: create_messenger_dataset.py  plot_probabilities.py
wamms/: __init__.py  _version.py  env.py  main.py  test.py
